# cassie_axum

./: .gitignore  .rustfmt.toml  Cargo.toml  JSRuntime.md  README.md  application.yml  axum.postman_collection.json  cassie_admin.sql
cassie_cache/: Cargo.toml
cassie_casbin_adapter/: Cargo.toml
cassie_casbin_adapter/src/: action.rs  cici_adapter.rs  lib.rs  models.rs
cassie_common/: Cargo.toml
cassie_common/src/: error.rs  lib.rs
cassie_common/src/utils/: bencher.rs  mod.rs  password_encoder.rs  string.rs
cassie_config/: Cargo.toml
cassie_devtools/: Cargo.toml
cassie_devtools/src/: lib.rs  main.rs
cassie_devtools/src/core/: mapping.rs  mod.rs
cassie_devtools/src/template/: dto_template.hbs  entity_template.hbs  resources_template.hbs  service_template.hbs
cassie_domain/: Cargo.toml
cassie_domain/src/: lib.rs
cassie_domain/src/dto/: asi_dto.rs  mod.rs  sign_in.rs  sys_auth_dto.rs  sys_config_dto.rs  sys_config_tab_dto.rs  sys_dict_dto.rs  sys_event_dto.rs  sys_group_data_dto.rs  sys_group_dto.rs  sys_log.rs  sys_menu_dto.rs  sys_params_dto.rs  sys_role_dto.rs  sys_user_dto.rs  user_dto.rs
cassie_domain/src/entity/: asi_entitys.rs  event.rs  log.rs  mod.rs  pagedata.rs  sms.rs  sys_config_entity.rs  sys_config_tab_entity.rs  sys_entitys.rs  sys_group_data_entity.rs  sys_group_entity.rs  user_entity.rs
cassie_domain/src/request/: mod.rs  request_model.rs  tree.rs
cassie_domain/src/vo/: jwt.rs  mod.rs  sign_in.rs  wx.rs
cassie_engine/: Cargo.toml
cassie_engine/src/: 00_primordials.js  01_core.js  02_error.js  async_cancel.rs  async_cell.rs  bindings.rs  encode_decode_test.js  error.rs  error_builder_test.js  error_codes.rs  extensions.rs  flags.rs  gotham_state.rs  inspector.rs  internal.d.ts  lib.deno_core.d.ts  lib.rs  module_specifier.rs  modules.rs  normalize_path.rs  ops.rs  ops_builtin.rs  ops_metrics.rs  resources.rs  runtime.rs  text.rs
cassie_event/: Cargo.toml
cassie_macros/: Cargo.toml
cassie_macros/src/: lib.rs
cassie_ops/: Cargo.toml
cassie_ops/src/: lib.rs
cassie_orm/: Cargo.toml
cassie_orm/src/: lib.rs
cassie_orm/src/dao/: interceptor.rs  mapper.rs  mod.rs
cassie_orm/src/mapper/: menu_mapper.html
cassie_storage/: Cargo.toml
cassie_storage/src/: lib.rs
cassie_storage/src/upload/: oss_service.rs  upload_service.rs
cassie_tests/: Cargo.toml
cassie_tests/src/: error.rs  lib.rs  main.rs  request.rs  response.rs
cassie_tests/src/sqlparse/: mod.rs
cassie_upload/: Cargo.toml
cassie_upload/src/upload/: mod.rs  oss_service.rs  upload_service.rs
cassie_web/: Cargo.toml  application.yml  sql_mapper.html
cassie_web/auth_config/: rbac_with_domains_model.conf
cassie_web/js/: cassie.js
cassie_web/mapper/: menu_mapper.html
cassie_web/src/: error.rs  lib.rs  main.rs
cassie_web/src/admin/: mod.rs  sys_auth_resource.rs  sys_dict_type_resource.rs  sys_dict_value_resource.rs  sys_menu_resource.rs  sys_params_resource.rs  sys_role_resource.rs  sys_user_resource.rs
cassie_web/src/admin/asi/: asi_group_column_controller.rs  asi_group_column_resource.rs  asi_group_controller.rs  asi_group_resource.rs  asi_group_values_controller.rs  asi_group_values_resource.rs  mod.rs
cassie_web/src/admin/jsruntime/: mod.rs
cassie_web/src/admin/sys/: mod.rs  sys_auth_resource.rs  sys_config_resource.rs  sys_config_tab_resource.rs  sys_dict_type_resource.rs  sys_dict_value_resource.rs  sys_group_data_resource.rs  sys_group_resource.rs  sys_menu_resource.rs  sys_params_resource.rs  sys_role_resource.rs  sys_upload_resource.rs  sys_user_resource.rs
cassie_web/src/api/: mod.rs  user_resources.rs  wxapp_resources.rs
cassie_web/src/casbin_adapter/: action.rs  cici_adapter.rs  mod.rs  models.rs
cassie_web/src/cici_casbin/: casbin_service.rs  mod.rs
cassie_web/src/config/: config.rs  log.rs  mod.rs
cassie_web/src/dao/: interceptor.rs  mapper.rs  mod.rs  sql_mapper.html
cassie_web/src/dto/: asi_dto.rs  mod.rs  sign_in.rs  sys_dict_dto.rs  sys_menu_dto.rs  sys_params_dto.rs  sys_role_dto.rs  sys_user_dto.rs
cassie_web/src/entity/: asi_entitys.rs  mod.rs  sys_entitys.rs
cassie_web/src/initialize/: casbin.rs  config.rs  database.rs  event.rs  mod.rs  rules.rs  service.rs
cassie_web/src/interceptor/: core.rs  interceptor.rs  mod.rs
cassie_web/src/middleware/: auth.rs  auth_admin.rs  auth_api.rs  clean_context.rs  event.rs  mod.rs
cassie_web/src/nacos/: mod.rs
cassie_web/src/observe/: consumer.rs  event.rs  mod.rs
cassie_web/src/request/: mod.rs  request_model.rs
cassie_web/src/routers/: admin.rs  api.rs  mod.rs
cassie_web/src/service/: cache_service.rs  crud_service.rs  mem_service.rs  mod.rs  redis_service.rs  sys_auth_service.rs  sys_dict_service.rs  sys_menu_service.rs  sys_params_service.rs  sys_role_data_scope_service.rs  sys_role_menu_service.rs  sys_role_service.rs  sys_role_user_service.rs  sys_user_service.rs
cassie_web/src/service/api/: user_service.rs
cassie_web/src/service/asi/: asi_service.rs  asi_validation.rs  mod.rs
cassie_web/src/service/event/: event_service.rs  mod.rs  ops.rs
cassie_web/src/service/log/: log_service.rs  mod.rs
cassie_web/src/service/sys/: cache_service.rs  crud_service.rs  mem_service.rs  mod.rs  redis_service.rs  sys_auth_service.rs  sys_config_service.rs  sys_config_tab_service.rs  sys_dict_service.rs  sys_group_data_service.rs  sys_group_service.rs  sys_menu_service.rs  sys_params_service.rs  sys_role_data_scope_service.rs  sys_role_menu_service.rs  sys_role_service.rs  sys_role_user_service.rs  sys_user_service.rs
cassie_web/src/service/upload/: mod.rs  oss_service.rs  upload_service.rs
cassie_web/src/service/wechat/: mod.rs  wxapp_service.rs
cassie_web/src/utils/: tree.rs
cassie_web/src/vo/: jwt.rs  mod.rs  sign_in.rs
cassie_web/src/ws/: mod.rs  msg.rs  ws_handle.rs  ws_server.rs
cassie_wx/: Cargo.toml
cassie_wx/src/: lib.rs  main.rs
cassie_wx/src/mp/: auth.rs  mod.rs
cassie_wx/src/pay/: order.rs
cassie_wx/src/sdk/: aes_crypt.rs  client.rs  config.rs  constant.rs  mod.rs  token.rs
cassie_wx/src/wxapp/: auth.rs  mod.rs
(+13 files in other folders)
