[workspace]
resolver = "2"
members = [
    "cassie_common",
    "cassie_config",
    "cassie_domain",
    "cassie_devtools",
    "cassie_orm",
    "cassie_storage",
    "cassie_web",
    "cassie_wx",
    "cassie_casbin_adapter",
    "cassie_tests"
]

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = '...'  # Platform-specific.
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false



[profile.release.package.cassie_common]
opt-level = 3

[profile.release.package.cassie_config]
opt-level = 3

[profile.release.package.cassie_domain]
opt-level = 3


[profile.release.package.cassie_orm]
opt-level = 3

[profile.release.package.cassie_storage]
opt-level = 3


[profile.release.package.cassie_web]
opt-level = 3

[profile.release.package.cassie_wx]
opt-level = 3

[profile.release.package.cassie_casbin_adapter]
opt-level = 3
