[workspace]
resolver = "2"
members = [
    "cassie_common",
    "cassie_config",
    "cassie_domain",
    "cassie_devtools",
    "cassie_orm",
    "cassie_storage",
    "cassie_web",
    "cassie_wx",
    "cassie_casbin_adapter",
    "cassie_tests",
    "cassie_event"
]
exclude = ["cassie_tests","cassie_devtools"]
[profile.release]
codegen-units = 1
incremental = true
lto = true
opt-level = 'z' # Optimize for size



[profile.release.package.cassie_common]
opt-level = 3

[profile.release.package.cassie_config]
opt-level = 3

[profile.release.package.cassie_domain]
opt-level = 3


[profile.release.package.cassie_orm]
opt-level = 3

[profile.release.package.cassie_storage]
opt-level = 3


[profile.release.package.cassie_web]
opt-level = 3

[profile.release.package.cassie_wx]
opt-level = 3

[profile.release.package.cassie_casbin_adapter]
opt-level = 3

[profile.release.package.v8]
opt-level = 3

[profile.release.package.serde_v8]
opt-level = 3

[profile.release.package.serde]
opt-level = 3