[package]
name = "cassie_casbin_adapter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#async trait
async-trait = "0.1"
casbin = { version = "2.0.9", default-features = false, features = ["runtime-async-std", "cached", "logging"] }
rbson = "2.0"
rbatis = { version = "3.0", default-features = false, features = ["mysql", "runtime-async-std-rustls"] }
#must use async-std(Because actix-web relies on tokio0.2)
async-std = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"