[package]
name = "cassie_devtools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
rbson = "2.0"
rbatis = { version = "3.0", default-features = false, features = ["mysql", "runtime-async-std-rustls"] }
handlebars = "4.2.2"