[package]
name = "cassie_engine"
version = "0.1.0"
edition = "2021"
author = "String<348040933@qq.com>"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.55"
cassie_ops={path = "../cassie_ops"}
futures = "0.3.21"
indexmap = "1.7.0"
libc = "0.2.121"
log ="0.4.14"
once_cell = "1.10.0"
parking_lot = "0.12.0"
pin-project = "1.0.7"
serde = {version = "1.0.129",features = ["derive"]}
serde_json = {version = "1.0.66",features = ["preserve_order"]}
serde_v8 = "0.40.0"
url = {version = "2.2.2",features = ["serde"]}
v8 = "0.41.0"
tokio={version = "1.17",features = ["full"]}


