[package]
name = "cassie_macros"
version = "0.1.0"
edition = "2021"
description = "Proc macro for writing Event Bus"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "./src/lib.rs"
proc-macro = true

[dependencies]
proc-macro-crate = "1.1.3"
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full", "extra-traits"] }