[package]
name = "cassie_ops"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

path = "./src/lib.rs"
proc-macro = true
[dependencies.proc-macro-crate]
version = "1.1.3"

[dependencies.proc-macro2]
version = "1"

[dependencies.quote]
version = "1"

[dependencies.syn]
version = "1"
features = ["full", "extra-traits"]
