[package]
name = "cassie_storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"
[dependencies]
oss-rust-sdk = "0.3.1"
axum ={version="0.5.4",features = ["multipart"] }
async-trait = "0.1"
cassie_common = { path = "../cassie_common" }
cassie_config = { path = "../cassie_config" }
state = { version = "0.5", features = ["tls"] }