[package]
name = "cassie_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true
[dependencies]

pharos = "0.5.3"
futures = { version="^0.3"}
async-std = {version="1.10.0",features = ["attributes"]}
tokio = { version = "1", features = ["full", "fs", "io-util", "sync"] }