[package]
name = "cassie_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlparser = "0.16.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls","blocking"] }
tokio = { version = "1", features = ["full", "fs", "io-util", "sync"] }
serde = { version = "1", features = ["derive"] }
rbson = "2.0"
rbatis = { version = "3.0", default-features = false, features = ["mysql", "runtime-async-std-rustls"] }