[package]
name = "cassie_web"
version = "0.1.0"
edition = "2021"
author = "String<348040933@qq.com>"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum ={version="0.4.8",features = ["multipart"] }
tokio = { version = "1", features = ["full", "fs", "io-util", "sync"] }
tower-http = { version = "0.2.0", features = ["cors"] }
#serde and json
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

chrono = "0.4"


rbson = "2.0"
rbatis = { version = "3.0", default-features = false, features = ["mysql", "runtime-async-std-rustls"] }

async-std = "1.10"


#redis
redis = { version = "0.21.5", features = ["async-std-comp"] }

#captcha
captcha = "0.0.8"
#http client,use rust-tls replace to native tls
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls","blocking"] }

#async trait
async-trait = "0.1"
#map
indexmap = "1.7.0"


#futures
futures = "0.3"

casbin = { version = "2.0.9", default-features = false, features = ["runtime-async-std", "cached", "logging"] }

validator = "0.14.0"
validator_derive = "0.14.0"
#jwt
jsonwebtoken = "7"

#log
log = "0.4"
fast_log = { version="1.4", features = ["lz4","zip", "gzip"]}
percent-encoding = "2.1.0"
mongodb = { version = "2.1.0", default-features = false, features = ["async-std-runtime"] }

state = { version = "0.5", features = ["tls"] }

#cassie
cassie_domain = { path = "../cassie_domain" }
cassie_common = { path = "../cassie_common" }
cassie_config = { path = "../cassie_config" }
cassie_orm = { path = "../cassie_orm" }
cassie_upload = { path = "../cassie_upload" }
cassie_casbin_adapter = { path = "../cassie_casbin_adapter" }


[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
